--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -7,6 +7,7 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:cFVkArxtwTs3TFU=,iv:U+dtMKclgtL4Zn+nzqwLm91QcykeSXAbD1cVEJH9wj4=,tag:siLylQaV01hZX6vCzadhdQ==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:umFVEQYeClbFMxNjoV4W/tkx3G/8tA==,iv:M4sy3fiDQls3wGJc6ynhAJuYdjsHgM96220pzffjIok=,tag:RAaje5Bvu2OZAT7qBObBxw==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:aTcDphHM2rIWJgHtpXG9nimuPqwgjm495s8g4qW6I2fwW+L8,iv:WuF8fRqUORdIB7aaDnXvivJMf44EXN6h3csJugCTXsU=,tag:ZYmhJ/Qh8BS3YZgv6KccmA==,type:str]
+    INFLUXDB_API_TOKEN: ENC[AES256_GCM,data:MCVqfIg8RXa/1urjVaeZ7kCW2Nmo1Sjzw3v6z2M36sJWmxEQFMDIALONRufu88/2uyjDYgbURdDSNgkakdZMfCcAB52QBs8fsHBRUAtVXizevhuo50rrGg==,iv:fZnvnMa6yqETY0yqD6ZUEzch8kD3PFPACHs/bD+K7Fs=,tag:AeZIaHd/07lpTY8rPDXraA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             emJvRzVZWGNQOU5ySjdaN3ZIcUNFRzgKyWaoVuZgc6ndqDpKiEcMyYcWcHbgDxy+
             7PgDn1Tf18qCiLWnyvAuybybQ3nUzxxGTAnYZJ+2mlCW5J00uYsHEg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-03T15:12:06Z"
-    mac: ENC[AES256_GCM,data:XetsOOYbplcGzMdso8BeTTKoXwMuxn8KCt3o1mF4li7mvUNKDi8885BnjhUHMky2DR6OUasU/EVfzIkAwkVG4N9vg8AoQWRiOb6DuC4nJKwGBvps33bQi1Xw/k/EGHKZXK/nSF7JEsaJfOoEnHRn8+vdkJoQz6BSqmA0pO3tBeQ=,iv:ExRbaSwx7BGOjlsVi2fuOsyoXkoRsFFHw9Zr7NC2zWA=,tag:DDC+Gfsr8OiaPAS8X3LhnQ==,type:str]
+    lastmodified: "2024-10-01T20:58:07Z"
+    mac: ENC[AES256_GCM,data:ri2/RIVLuo1cTb4nFiGYm2EOiqo9ibSM2ijp0RhVmTlqCaROwdMzff/pBUr/jcGvqvfkx9fn9ZDIMLh+2iKddcZOj3+8bjVWO4vANI3DwDjPMKxE78ty7tGaiuO03H8BVAyIaHQtUHD2J4bUbngY7kaAVPj8H1tNh0dVvHMIa54=,iv:uHVo76ehsGiuVegVym0fAtW48/KIpQZ41HsHDs9z3lU=,tag:lRSSHpmH7+KtRXcp5wSWgQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
