--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -140,11 +140,16 @@ spec:
         additionalConfig:
           podMonitorNamespaceSelector:
             matchLabels: null
+            release: null
           serviceMonitorSelector:
             matchLabels: null
+            release: null
           ruleSelector:
             matchLabels: null
+            release: null
           probeSelector:
             matchLabels: null
+            release: null
           scrapeConfigSelector:
             matchLabels: null
+            release: null
