--- a/kubernetes/flux/repositories/helm/prometheus-community.yaml
+++ b/kubernetes/flux/repositories/helm/prometheus-community.yaml
@@ -5,6 +5,5 @@ metadata:
   name: prometheus-community
   namespace: flux-system
 spec:
-  type: oci
   interval: 24h
-  url: oci://ghcr.io/prometheus-community/charts
+  url: https://prometheus-community.github.io/helm-charts
