--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -138,12 +138,12 @@ spec:
             cpu: 200m
             memory: 200Mi
         podMonitorNamespaceSelector:
-          matchLabels: null
+          matchLabels: { }
         serviceMonitorSelector:
-          matchLabels: null
+          matchLabels: { }
         ruleSelector:
-          matchLabels: null
+          matchLabels: { }
         probeSelector:
-          matchLabels: null
+          matchLabels: { }
         scrapeConfigSelector:
-          matchLabels: null
+          matchLabels: { }
