--- a/kubernetes/apps/default/influx/external-service.yaml
+++ b/kubernetes/apps/default/influx/external-service.yaml
@@ -4,8 +4,18 @@ metadata:
   name: influxdb
   namespace: default
 spec:
-  type: ExternalName
-  externalName: 192.168.1.166
   ports:
     - port: 8086
       name: http
+  clusterIP: None
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: influxdb
+  namespace: default
+subsets:
+  - addresses:
+      - ip: 192.168.1.166
+    ports:
+      - port: 8086
