--- a/kubernetes/apps/default/influx/external-service.yaml
+++ b/kubernetes/apps/default/influx/external-service.yaml
@@ -9,13 +9,19 @@ spec:
       name: http
   clusterIP: None
 ---
-apiVersion: v1
-kind: Endpoints
+apiVersion: discovery.k8s.io/v1
+kind: EndpointSlice
 metadata:
   name: influxdb
   namespace: default
-subsets:
+  labels:
+    kubernetes.io/service-name: influxdb
+addressType: IPv4
+ports:
+  - name: http
+    appProtocol: http
+    protocol: TCP
+    port: 8086
+endpoints:
   - addresses:
-      - ip: 192.168.1.166
-    ports:
-      - port: 8086
+      - 192.168.1.166
