--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: bazarr
+      chart: app-template
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
