Update bazarr service monitor

--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -125,7 +125,7 @@ spec:
     serviceMonitor:
       exportarr:
         enabled: true
-        serviceName: exportarr
+        serviceName: bazarr-exportarr
         endpoints:
           - port: metrics
             scheme: http
