Update prowlarr to use app-template

--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    APIKEY: ""
+    APIKEY: ENC[AES256_GCM,data:ZgQj,iv:wMIooQ1lXb6+0N5PpvqG1mHJ1o1LRyeKpZ8PMLAIocM=,tag:gR3/3py9ZbnY336mrQMbUw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-01T03:41:21Z"
-    mac: ENC[AES256_GCM,data:bXnqnaBPSHfeEdBxYllSV/f6eb2OTcjJapByMCqcWrpN4IgBrCxXcuFVor/u+X9zbUF5sH6hE84Dd7314D8EFePy4dEYiS3AcfZ4pHWhE//m/dY+KIxdK0ZXd3wVOsl8hVvrfO57dazyR9i9q7wdKcv46sJTxqFxmq9YgLCJiCY=,iv:slE6vVT8xouKyyucKTMXn2OJIsVHRSAR54BmMWXrYqM=,tag:LiOu3E3g0nJhaMUo39+6Dw==,type:str]
+    lastmodified: "2024-10-03T03:59:16Z"
+    mac: ENC[AES256_GCM,data:2l7Erd1H+mp+zQk6cmucGsZO70r1iTj0guC4uou80ABamgtWy6113J1sbMo2MAMfMWuyRWj5mRlGTvKYugmn0NPcF5wz0ka0h+Oc1uSaevoIcI/mJ7Cdrfzj8q3rboFltS9JPPJRkAXQv076/GP4iINyfXlJfvBEFWOm+bEl1Q0=,iv:jwTVeopvPXJ9+2KGfGKO+Gs+3ILcUVm1nfggz1c+IrA=,tag:Xn+KoMT/CAc7A+5qRE+YrA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
