Update prowlarr to use app-template

--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    APIKEY: ENC[AES256_GCM,data:ZgQj,iv:wMIooQ1lXb6+0N5PpvqG1mHJ1o1LRyeKpZ8PMLAIocM=,tag:gR3/3py9ZbnY336mrQMbUw==,type:str]
+    APIKEY: ENC[AES256_GCM,data:cpbdUaPOldA=,iv:OUIWFvGHw39JhAMmES/fWIAylYd+5aLqyptjzn08GjQ=,tag:P3/KphzqAu/EueNaJWGn2A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T03:59:16Z"
-    mac: ENC[AES256_GCM,data:2l7Erd1H+mp+zQk6cmucGsZO70r1iTj0guC4uou80ABamgtWy6113J1sbMo2MAMfMWuyRWj5mRlGTvKYugmn0NPcF5wz0ka0h+Oc1uSaevoIcI/mJ7Cdrfzj8q3rboFltS9JPPJRkAXQv076/GP4iINyfXlJfvBEFWOm+bEl1Q0=,iv:jwTVeopvPXJ9+2KGfGKO+Gs+3ILcUVm1nfggz1c+IrA=,tag:Xn+KoMT/CAc7A+5qRE+YrA==,type:str]
+    lastmodified: "2024-10-03T04:04:59Z"
+    mac: ENC[AES256_GCM,data:ayvLrT5Gxwlc1QcW34Rv+uUuS7eMd7bwgiP4hFaBot2GHyqW4UBMpX47HjComvsccGzBzgXpbvfykNqqMww57/Klge2AlmO2sYqNwzM9gKezShrq7w0rm+uOlGFF+3gHV80ieYWem1z0/nFkLvvP8zZaUlAzaS+RnanoxXc/TLY=,iv:g7wT4x/cqtN9vQ6w/s6RAH6Lubc1YJFWhlCxo1ZvSp8=,tag:762ZVhBNw7SeIp7Z7JPISA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
