Update prowlarr to use app-template

--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    APIKEY: ENC[AES256_GCM,data:cpbdUaPOldA=,iv:OUIWFvGHw39JhAMmES/fWIAylYd+5aLqyptjzn08GjQ=,tag:P3/KphzqAu/EueNaJWGn2A==,type:str]
+    APIKEY: ENC[AES256_GCM,data:RLcawkHfkk0tmjBcC3/o9u2/T32CcmjS0yUF8GHYsq3j5/jH9IFd3lPImiI=,iv:EzQMX2PKQt71lPXFDr0Lz28LKOB2uW/682HUPfhQ7+g=,tag:TP7VLvqDnHBuJsMf9n76AA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T04:04:59Z"
-    mac: ENC[AES256_GCM,data:ayvLrT5Gxwlc1QcW34Rv+uUuS7eMd7bwgiP4hFaBot2GHyqW4UBMpX47HjComvsccGzBzgXpbvfykNqqMww57/Klge2AlmO2sYqNwzM9gKezShrq7w0rm+uOlGFF+3gHV80ieYWem1z0/nFkLvvP8zZaUlAzaS+RnanoxXc/TLY=,iv:g7wT4x/cqtN9vQ6w/s6RAH6Lubc1YJFWhlCxo1ZvSp8=,tag:762ZVhBNw7SeIp7Z7JPISA==,type:str]
+    lastmodified: "2024-10-03T04:06:04Z"
+    mac: ENC[AES256_GCM,data:nGSl0s241InfUP6hl+fY+wQMqEpOusZRhoUaEuljvcpmjEfg9csOxMZonb674cVYXCor1CxOTVQW3HWrQtIL1bGp3ZfgEnTV1HOWjaxwNlcpAcgZ98Ed+NtEYB5h5ocbzPRkgufBZft56Lvta6+i4SwnQ4lwUvWT7P8tLX+IFOM=,iv:WF2glLZ7CJH2ytQKNLwD9xGyucgksBqsqc/L8sj7dVE=,tag:VlDJIy+MStT93I4v5lLtYQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
