Update prowlarr to use app-template

--- a/kubernetes/apps/default/prowlarr/prowlarr.yaml
+++ b/kubernetes/apps/default/prowlarr/prowlarr.yaml
@@ -22,7 +22,7 @@ spec:
       main:
         containers:
           exportarr:
-            enabled: false
+            enabled: true
             args:
               - prowlarr
             env:
