Fix api key naming

--- a/kubernetes/apps/default/bazarr/secret.sops.yaml
+++ b/kubernetes/apps/default/bazarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    APIKEY: ENC[AES256_GCM,data:5K6zxnpfKfhIeNx9XIBIegrpg+4yzfDJBHukZVW4s2+1rpkyowhPtohhXGM=,iv:kd/EblgyuHaQSU+QLWI8S9ErIBQ4iy89efGe7k4SJ5E=,tag:NVYYMM5MEhkdVQkzhugLFg==,type:str]
+    API_KEY: ENC[AES256_GCM,data:U4uGifhyKqq2x43nTFmmftABlCJ0Csd8X0bqUh5PuYjMQnbHdPZe79KORV8=,iv:oEZr6G2c7Cu67qF6fsaVRJ1jGcFT7mhdFJ4dGwF12uY=,tag:+igF5acDmjApt2zwD6teiQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             SlBTRHNpTmxtdUk4dE9hSDlwSDVmSGsKJRGp0MSuKFuwbNFFFK8Ut1Wm9S5WSb6r
             e8XOfPNgUi6Ruo+uDpukywoyGlYxw7JHO976HRWKXNacHXKsE3DWuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-02T20:07:39Z"
-    mac: ENC[AES256_GCM,data:c0wZpR5WkwtOnJYnZno4VxVeDM3tA2Y2Gc/1A8+WkKFMbu/Otb1v+MfjC8My5WPY/cV8lpyygoLjvszwh91GA1OhPVMZJ257yYKwvPSsJSgypFyp6z9gj9+t3yf60jQOJ9CTZmpzpITYovSbaRr570+0gPiTlSn2xQxKk9m9cJA=,iv:UOEhKB2uhnJZZqJcJPKT71b30dusiQH5bqJJOIAMdt4=,tag:FOd1xGxZjaHF+DXr5NzyMw==,type:str]
+    lastmodified: "2024-10-03T14:29:05Z"
+    mac: ENC[AES256_GCM,data:LgIHBFSvAO4xiWx5K55u7G9Crj+tPmPCVtTCHzCH2zqmR+Sqcrxg9wISJQVdbnOj5tUlvzDnLAvsaECpWSni7en+SQ6CViIEhv6v9DBpcdPkwoXotywtF1WkX58tXg4UfsZ0+GVcInMGNjc7KvBwl0mvmnL0+jEgn2gm+a/BObs=,iv:TAWoXgmowKBPVNoYB58V6lu/NabRul9a9MydfVkMn7o=,tag:II8o3YjYbyFDCRt5JuWF2g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
