--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    APIKEY: ENC[AES256_GCM,data:Ne0wX6U1XBEv4IpwsBs5iRL6G4u57KmABryN4eeLzmZTDuz0wmZM/+zy56c=,iv:e0OMFq2+D/r5dRVTqNvxs0MfwWWcmCDZMp3yWQt0Eps=,tag:FQAZd9Qqo4+vnBK/HP167g==,type:str]
+    API_KEY: ENC[AES256_GCM,data:RKcQyqsu2XDdn5y6KDO1hWvfqlNB/oBX4mKh8cgobMjuuh7s0AOGURx72hE=,iv:vMwwfRNEo+wH0oYmKts13EuwCuPgeELqbiLohTg9jMs=,tag:ow2Am8sXxuAAxSkdqtnn2g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T05:07:25Z"
-    mac: ENC[AES256_GCM,data:woaCF8wcFz05kRMOX6NNTVLdS1uAq+8Z0yt3m4R1VwXaO7OK1t8K0hRlk7Ow21EL+0rvyXKF6sD34xGNLx5DcQabvXYmXzWO/jRgl46FJMvH/yBjQM41Q5T4iJ6uYrFqO6GIAJPgVS2PhJ8hoxuf0lrlAfCn+TruHsWKfJz30lg=,iv:WnwOeXRdTnMvgANf3o5wwb4EGc2ce/4q0O0VorSLQxU=,tag:Io9gzc+ImpPL9ncHElgx+A==,type:str]
+    lastmodified: "2024-10-03T14:28:02Z"
+    mac: ENC[AES256_GCM,data:5HvVa5BDnwiaNBTH3v3MbPAHZqTUouFAWPtrYV1ftGBAvXAACfOv/SVfPxMf4Aw4rl3fpGyulprCNaG/x61Y8FAan2K9j/H5US17gbVINMMAvYNmjKWmn2tqap4xltVCwuwBQ9dypbdCrEpbpa+DjkyIMdp1Yri4k8Ie5ehuIi0=,iv:S7vwLcMU8ogwvKOLcwOF1JWI0ix3F3VNzbbkx5U3JJk=,tag:91570V0IsXVunmv7GWyJ1g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
