--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    APIKEY: ENC[AES256_GCM,data:aSyHDNgU+bDLTcvQLFRj6cdRTHQ7kmywOmQAGt2hbF4p4bAoghbyShUAXsc=,iv:c+KMpZwOMKjnUxZbWfs8jwKqEXLYIXqYDaTBLMd+fvk=,tag:NTZlU0SDLq+Bf665wSVXjA==,type:str]
+    API_KEY: ENC[AES256_GCM,data:RXL/yiJi/UC6OlZ0iizAX8+6ik1IYMiiK3Fi60oqDZe9+5bjDePX/7C729w=,iv:sEeYAa+N+0suutYWWdxFAjRNmAtC1nBTdvryvqeuKd8=,tag:2KBWS0/GOxligNIFXdQXDQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             ODFiZ0ZNNldoaFRNQ1pvMkZrczBmbncKwXszjlYxaOQ2VC17LJpEFQOoquoswkM/
             2fkREaeaVQUm4XA/tLzGvzbVlCh1nGa0/GaAvb3zU5qkD730PlbuNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T03:36:22Z"
-    mac: ENC[AES256_GCM,data:8VdYv9XPYitZqj+sKvij74yWw+gP0+nViA0EpNfBs36mSIDj/xg8k+GBnJmhv6wxLl52Z+ak7Jk9VMT13zcFmC5dhwY4wj8nPa3ePeQpVXkMtV8V8druMzr6HyqXEa0zVFh2c9Xm7XK7b2cVQGKofmS24seLmlrWSfHn0fnjEjg=,iv:O48dCqJvjASgNdbmDqR+QPchFHhqPWsGvMBPUzAEntY=,tag:DWbvVPMNQbNT2msSe4Zcvw==,type:str]
+    lastmodified: "2024-10-03T14:28:26Z"
+    mac: ENC[AES256_GCM,data:UDERR1i/NWPDHC/IyvEgAdjkmULsTf6ZoVzyeQz4f6+Cz3fRunN1iDHGswhykaxADg4HeaENBtYAz4OG9+4xVANKpzaxQvX2rwLMS3EMlQu6iLnqvXo4fMH/QgFQKR9DX+3yIZ4UI3U0O63TzwDjwf/0GHt7ET1R+eiko1PayDs=,iv:L5qhaMZ+MVjb/K59rW9dai/qkHJJrzjoXyG7N31my7o=,tag:mqz1L54QukQLsYNx0pM/yw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
