--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -50,11 +50,11 @@ spec:
             args:
               - bazarr
             env:
-              APIKEY:
+              API_KEY:
                 valueFrom:
                   secretKeyRef:
                     name: bazarr-apikey
-                    key: APIKEY
+                    key: API_KEY
               URL: http://bazarr:6767
               PORT: 6768
     global:
