Add more config options for exportarr

--- a/kubernetes/apps/default/prowlarr/prowlarr.yaml
+++ b/kubernetes/apps/default/prowlarr/prowlarr.yaml
@@ -28,11 +28,14 @@ spec:
             env:
               URL: http://prowlarr:9696
               PORT: 9697
+              CONFIG: /config/config.xml
               API_KEY:
                 valueFrom:
                   secretKeyRef:
                     name: prowlarr-apikey
                     key: API_KEY
+            envFrom:
+              - secret: prowlarr-apikey
             image:
               repository: ghcr.io/onedr0p/exportarr
               tag: v2.0.1
