--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -6,6 +6,8 @@ metadata:
 type: Opaque
 data:
     API_KEY: ENC[AES256_GCM,data:RKcQyqsu2XDdn5y6KDO1hWvfqlNB/oBX4mKh8cgobMjuuh7s0AOGURx72hE=,iv:vMwwfRNEo+wH0oYmKts13EuwCuPgeELqbiLohTg9jMs=,tag:ow2Am8sXxuAAxSkdqtnn2g==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:faYRiCMujeUkj0gV,iv:/9DjMvrhRbEGSUsY3Nk0opYRJQCdBfUjWN0jxr7m7lM=,tag:NstpeRxdxSMteA3LRf+pnw==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:sVOXg8RIng31p3v6,iv:nVsadFOkyQnE7eBuwJRrcFA6Qx85o/5zswylwmVEQUo=,tag:tCT8jcwt0wmWXg8+LCF74g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +23,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T14:28:02Z"
-    mac: ENC[AES256_GCM,data:5HvVa5BDnwiaNBTH3v3MbPAHZqTUouFAWPtrYV1ftGBAvXAACfOv/SVfPxMf4Aw4rl3fpGyulprCNaG/x61Y8FAan2K9j/H5US17gbVINMMAvYNmjKWmn2tqap4xltVCwuwBQ9dypbdCrEpbpa+DjkyIMdp1Yri4k8Ie5ehuIi0=,iv:S7vwLcMU8ogwvKOLcwOF1JWI0ix3F3VNzbbkx5U3JJk=,tag:91570V0IsXVunmv7GWyJ1g==,type:str]
+    lastmodified: "2024-10-03T14:43:52Z"
+    mac: ENC[AES256_GCM,data:4oQxQgFyKpjVX8+whDWCgRnYGq+e5lpUUwFASLOXvYkI1WBAy2SscbnCyWnMOO4a9GJDtf3tTz6GyH6DVyVLNiDEarthrx6VB14eUGzj0Qy6KQGesp5pv3fPse6qQvFV3XbBUrIVd3ukW5j2oWMkw49Do6lfFrnthrGiSzFMDVE=,iv:ZnmVxmzWoQBNnktvMSWnQGCypeVqGH9Wx1yFWrOyYjs=,tag:rSRI5b5hBIgvGdQ+xcVxiA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
