--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -6,6 +6,8 @@ metadata:
 type: Opaque
 data:
     API_KEY: ENC[AES256_GCM,data:RXL/yiJi/UC6OlZ0iizAX8+6ik1IYMiiK3Fi60oqDZe9+5bjDePX/7C729w=,iv:sEeYAa+N+0suutYWWdxFAjRNmAtC1nBTdvryvqeuKd8=,tag:2KBWS0/GOxligNIFXdQXDQ==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:TwcB+P99/Lt4V2EX,iv:C4JnjF+0LSciGOMmuyAUvr6uDWLxAB6GKBhMoSOx0+M=,tag:Mq3NEOTGIgDVrspfPwSojQ==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:fvuwNWJz2ykyNhVY,iv:Pubn8agcv/OuTA4oEhEVtvmeanCaf03qoukWgOe8+mg=,tag:9Lwbz5cGkscLi/G+LsLaDw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +23,8 @@ sops:
             ODFiZ0ZNNldoaFRNQ1pvMkZrczBmbncKwXszjlYxaOQ2VC17LJpEFQOoquoswkM/
             2fkREaeaVQUm4XA/tLzGvzbVlCh1nGa0/GaAvb3zU5qkD730PlbuNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T14:28:26Z"
-    mac: ENC[AES256_GCM,data:UDERR1i/NWPDHC/IyvEgAdjkmULsTf6ZoVzyeQz4f6+Cz3fRunN1iDHGswhykaxADg4HeaENBtYAz4OG9+4xVANKpzaxQvX2rwLMS3EMlQu6iLnqvXo4fMH/QgFQKR9DX+3yIZ4UI3U0O63TzwDjwf/0GHt7ET1R+eiko1PayDs=,iv:L5qhaMZ+MVjb/K59rW9dai/qkHJJrzjoXyG7N31my7o=,tag:mqz1L54QukQLsYNx0pM/yw==,type:str]
+    lastmodified: "2024-10-03T14:48:47Z"
+    mac: ENC[AES256_GCM,data:Y9GBZ2br4Z+YEZZ02XT1FZN9BaW18wmR4IXspsS83kF8WQ7jUV7fwYI4p/aU/85LNgFb2Nfm3Uyhj0NtRjjh5SMGguuds1tT+DKtjc71mZKw56CHoyjJNL9In8gdeME9DcsKUGNQGtKbCzOSCjnDsTz5oMiXMBWEtL45WbEaOZ8=,iv:Tmt4lqHZYTb3uIjNbfJQCmOTrykIVLVWafbosXdQP6o=,tag:t2EHuXruyRKA6DWcMmFMfg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
