--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -57,6 +57,8 @@ spec:
                     key: API_KEY
               URL: http://bazarr:6767
               PORT: 6768
+            envFrom:
+              - secret: bazarr-apikey
     global:
       fullnameOverride: bazarr
       labels:
