--- a/kubernetes/apps/default/bazarr/secret.sops.yaml
+++ b/kubernetes/apps/default/bazarr/secret.sops.yaml
@@ -6,6 +6,8 @@ metadata:
 type: Opaque
 data:
     API_KEY: ENC[AES256_GCM,data:U4uGifhyKqq2x43nTFmmftABlCJ0Csd8X0bqUh5PuYjMQnbHdPZe79KORV8=,iv:oEZr6G2c7Cu67qF6fsaVRJ1jGcFT7mhdFJ4dGwF12uY=,tag:+igF5acDmjApt2zwD6teiQ==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:hJLu10SefoBzquhd,iv:e5NOm82SmBqAH7JTX4OFug1kKVO+ygaQ8v8JEPikwMA=,tag:zebxC7lDkpnP1TLRMlNjFg==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:G7T1bLrtKR6+rphu,iv:C6KAfxWYYrkPLipLjP7DJwlLHfbHeCeYrlVTdFrJrlE=,tag:oSdQYPN1ppLL/bNJHJ0faA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +23,8 @@ sops:
             SlBTRHNpTmxtdUk4dE9hSDlwSDVmSGsKJRGp0MSuKFuwbNFFFK8Ut1Wm9S5WSb6r
             e8XOfPNgUi6Ruo+uDpukywoyGlYxw7JHO976HRWKXNacHXKsE3DWuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T14:29:05Z"
-    mac: ENC[AES256_GCM,data:LgIHBFSvAO4xiWx5K55u7G9Crj+tPmPCVtTCHzCH2zqmR+Sqcrxg9wISJQVdbnOj5tUlvzDnLAvsaECpWSni7en+SQ6CViIEhv6v9DBpcdPkwoXotywtF1WkX58tXg4UfsZ0+GVcInMGNjc7KvBwl0mvmnL0+jEgn2gm+a/BObs=,iv:TAWoXgmowKBPVNoYB58V6lu/NabRul9a9MydfVkMn7o=,tag:II8o3YjYbyFDCRt5JuWF2g==,type:str]
+    lastmodified: "2024-10-03T14:44:46Z"
+    mac: ENC[AES256_GCM,data:tl+22IdsurBH6qJn1VK7v1LM9qTBI3/m/LLxlsCheYVcG7pSrGIi3R1I1ZSyGKYrsJvOnyi8ng0ALOozjdfe195C46lSWKuynTcJQHN4i1rQ/RvVGAG9MsiQrTs0HuFmfc1oNlY6NC2Y8h8MMSh0dQNDFxnDGsWM/979+RBpTuY=,iv:myZZ4NeSjzqY7Ci8B449yCweo7YxLEq8gpT/XfGCpa0=,tag:KZbiDpGN14RYJNMhSfVrlw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
