Add more config options for exportarr

--- a/kubernetes/apps/default/bazarr/bazarr.yaml
+++ b/kubernetes/apps/default/bazarr/bazarr.yaml
@@ -57,6 +57,7 @@ spec:
                     key: API_KEY
               URL: http://bazarr:6767
               PORT: 6768
+              FORM_AUTH: true
             envFrom:
               - secret: bazarr-apikey
     global:
