Add more config options for exportarr

--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -6,6 +6,7 @@ metadata:
 type: Opaque
 data:
     API_KEY: ENC[AES256_GCM,data:RKcQyqsu2XDdn5y6KDO1hWvfqlNB/oBX4mKh8cgobMjuuh7s0AOGURx72hE=,iv:vMwwfRNEo+wH0oYmKts13EuwCuPgeELqbiLohTg9jMs=,tag:ow2Am8sXxuAAxSkdqtnn2g==,type:str]
+    APIKEY: ENC[AES256_GCM,data:5nYUrCpxSzvoNbwpyzbV1NXEbQLgUMYFiYXhCISPclZIOE2mAkKsUtiyaLg=,iv:DecW1QYQF3pPjRdnSHnk47DXAleCK7Jw38bvttKgK+4=,tag:VXUv0Ya9XitVqHkk07rL0Q==,type:str]
     AUTH_PASSWORD: ENC[AES256_GCM,data:faYRiCMujeUkj0gV,iv:/9DjMvrhRbEGSUsY3Nk0opYRJQCdBfUjWN0jxr7m7lM=,tag:NstpeRxdxSMteA3LRf+pnw==,type:str]
     AUTH_USERNAME: ENC[AES256_GCM,data:sVOXg8RIng31p3v6,iv:nVsadFOkyQnE7eBuwJRrcFA6Qx85o/5zswylwmVEQUo=,tag:tCT8jcwt0wmWXg8+LCF74g==,type:str]
 sops:
@@ -23,8 +24,8 @@ sops:
             VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
             Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-03T14:43:52Z"
-    mac: ENC[AES256_GCM,data:4oQxQgFyKpjVX8+whDWCgRnYGq+e5lpUUwFASLOXvYkI1WBAy2SscbnCyWnMOO4a9GJDtf3tTz6GyH6DVyVLNiDEarthrx6VB14eUGzj0Qy6KQGesp5pv3fPse6qQvFV3XbBUrIVd3ukW5j2oWMkw49Do6lfFrnthrGiSzFMDVE=,iv:ZnmVxmzWoQBNnktvMSWnQGCypeVqGH9Wx1yFWrOyYjs=,tag:rSRI5b5hBIgvGdQ+xcVxiA==,type:str]
+    lastmodified: "2024-10-03T15:23:40Z"
+    mac: ENC[AES256_GCM,data:bk9Mtn/lOsmJyKW8WNPk03eyrdwmV3pWVYVGEIbjHn5IoFGNy8h1aYk3dwPzW+1PzEoGuJlWyVNOZFXbmu82bSr/wbdL050cf3w1v1qxM9lRdIetJM11bf2Zg1qxTtrGLSpV8qUyKhb5u3/1mO9LVO2HP1C64aV8RX/ZDDiwp9s=,iv:IhCk/VEgR/+RA2sHKP7hBLpQ07B/YWC1/EWtI/TvPR0=,tag:Jt7GxSRGH34mhnAL/PVBLg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
